# cli

./: AGENTS.md  CONTEXT.md  Cargo.toml  ONE.md  PROGRESS.md  README.md  TEST.md  install.sh  renovate.json
.claude/: CLAUDE.md
.claude/commands/: one-guide.md
.claude/projects/-Users-lukeoliff-Projects-one-artificial/memory/: feedback_no_sed.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml
crates/one-ai/: Cargo.toml
crates/one-ai/src/: anthropic.rs  lib.rs  mock.rs
crates/one-ai/src/providers/: mod.rs  openai_compat.rs  tool_shim.rs
crates/one-cli/: Cargo.toml
crates/one-cli/src/: main.rs
crates/one-cli/src/tasks/: calibrate.rs  chronicle.rs  evergreen.rs  mod.rs  palimpsest.rs  prelude.rs
crates/one-cli/tests/: integration.rs
crates/one-core/: Cargo.toml
crates/one-core/src/: agent.rs  config.rs  conversation.rs  credentials.rs  cron.rs  effort.rs  event.rs  evergreen.rs  import.rs  keybindings.rs  lib.rs  memory.rs  oauth.rs  onboarding.rs  permissions.rs  plugin.rs  provider.rs  query_engine.rs  session.rs  settings.rs  skills.rs  state.rs  storage.rs  system_prompt.rs  tasks.rs  worktree.rs
crates/one-core/src/compact/: auto_compact.rs  mod.rs  prompt.rs
crates/one-core/src/mcp/: client.rs  config.rs  jsonrpc.rs  mod.rs  sse.rs  transport.rs
crates/one-core/tests/: tests.rs
crates/one-db/: Cargo.toml
crates/one-db/src/: lib.rs  paths.rs  session_db.rs
crates/one-integrations/: Cargo.toml
crates/one-integrations/src/: asana.rs  github.rs  lib.rs  notion.rs  slack.rs
crates/one-tools/: Cargo.toml
crates/one-tools/src/: agent.rs  ask_user.rs  bash.rs  cron_tools.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  mcp_resources.rs  notebook_edit.rs  one_md.rs  plan_mode.rs  recall_detail.rs  registry.rs  script_tool.rs  skill_tool.rs  sleep.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree_tools.rs
crates/one-tools/tests/: tests.rs
crates/one-tui/: Cargo.toml
crates/one-tui/src/: app.rs  autocomplete.rs  commands.rs  input.rs  lib.rs  logo.txt  markdown.rs  onboarding.rs  pet.rs  render.rs  tabs.rs  theme.rs  widgets.rs
