[workspace]
resolver = "2"
members = [
    "crates/one-cli",
    "crates/one-tui",
    "crates/one-core",
    "crates/one-ai",
    "crates/one-tools",
    "crates/one-integrations",
    "crates/one-db",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Luke Oliff"]

[workspace.dependencies]
# Async runtime
tokio = { version = "= 1.51.0", features = ["full"] }

# Serialization
serde = { version = "= 1.0.228", features = ["derive"] }
serde_json = "= 1.0.149"
toml = "= 0.8.23"

# Error handling
anyhow = "= 1.0.102"
thiserror = "= 2.0.18"

# TUI
ratatui = "= 0.30.0"
crossterm = "= 0.29.0"

# HTTP
reqwest = { version = "= 0.12.28", default-features = false, features = ["json", "stream", "native-tls", "cookies"] }

# CLI
clap = { version = "= 4.6.0", features = ["derive"] }

# Logging
tracing = "= 0.1.44"
tracing-subscriber = { version = "= 0.3.23", features = ["env-filter"] }

# Utilities
chrono = { version = "= 0.4.44", features = ["serde"] }
uuid = { version = "= 1.23.0", features = ["v4"] }
trait-variant = "= 0.1.2"
futures-util = "= 0.3.32"
dirs-next = "= 2.0.0"
fastrand = "= 2.4.1"
keyring = { version = "= 3.6.1", features = ["apple-native", "sync-secret-service"] }
pulldown-cmark = "= 0.13.0"
open = "= 5.3.2"
sha2 = "= 0.10.9"
base64 = "= 0.22.1"
rand = "= 0.8.5"
clap_complete = "= 4.6.0"
whoami = "= 1.6.0"
similar = "= 2.7.0"
once_cell = "= 1.20.2"

# Workspace crates
one-core = { path = "crates/one-core" }
one-tui = { path = "crates/one-tui" }
one-ai = { path = "crates/one-ai" }
one-tools = { path = "crates/one-tools" }
one-integrations = { path = "crates/one-integrations" }
one-db = { path = "crates/one-db" }
