[package]
name = "one-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types, traits, and event system for One"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
trait-variant.workspace = true
toml.workspace = true
dirs-next.workspace = true
rusqlite = { version = "= 0.35.0", features = ["bundled"] }
whoami.workspace = true
keyring.workspace = true
reqwest.workspace = true
open.workspace = true
sha2.workspace = true
base64.workspace = true
hex = "= 0.4.3"
rand.workspace = true
futures-util.workspace = true
crossterm.workspace = true
url = "= 2.5.4"
