[package]
name = "one-integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "External service integrations for One — Slack, GitHub, Asana, Notion"

[dependencies]
one-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
trait-variant.workspace = true
